--- a/teamcalendar/templates/teamcalendar.html
+++ b/teamcalendar/templates/teamcalendar.html
@@ -6,13 +6,13 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
   <head>
-    <title>About Trac</title>
+    <title>Team Calendar</title>
   </head>
 
   <body>
     <div id="content" class="teamcalendar">
 		
-		<h1>Team availability</h1>
+		<h1>Team Calendar</h1>
 		
 		<div class="message" py:content="message" />
 		
