--- a/teamcalendar/templates/teamcalendar.html
+++ b/teamcalendar/templates/teamcalendar.html
@@ -3,7 +3,10 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
-      xmlns:xi="http://www.w3.org/2001/XInclude">
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      xmlns:i18n="http://genshi.edgewall.org/i18n"
+      i18n:domain="teamcalendar"
+      >
   <xi:include href="layout.html" />
 
   <head>
@@ -30,7 +33,7 @@
         <label for="to_date">To:</label>
           <input id="to_date" type="text" name="to_date" class="datepicker-field"
             py:attrs="dict(value=to_date.isoformat())"/>
-            <input type="submit" name="change_view" value="Change"/>
+            <input type="submit" name="change_view" value="${_('Change')}"/>
   
         <input id="orig_form_date" type="hidden" name="orig_from_date"
             py:attrs="dict(value=from_date.isoformat())"/>
@@ -63,7 +66,7 @@
         </table>
   
         <div class="buttons" py:if="can_update">
-          <input type="submit" name="update_calendar" value="Apply changes"/>
+          <input type="submit" name="update_calendar" value="${_('Apply changes')}"/>
         </div>
       </form>
     </div>
