--- a/teamcalendar/templates/teamcalendar.html
+++ b/teamcalendar/templates/teamcalendar.html
@@ -17,16 +17,16 @@
     <div id="content" class="teamcalendar">
 
       <h1>Team Calendar</h1>
-  
+
       <div class="message" py:content="message" />
-  
+
       <p>Please indicate your availability by ticking the boxes
          under your name, below. To display a different date range,
          use the date selectors below.
       </p>
-  
+
       <form id="teamcalendar" method="post" action="">
-  
+
         <label for="from_date">From:</label>
           <input id="from_date" type="text" name="from_date" class="datepicker-field"
             py:attrs="dict(value=from_date.isoformat())"/>
@@ -34,12 +34,12 @@
           <input id="to_date" type="text" name="to_date" class="datepicker-field"
             py:attrs="dict(value=to_date.isoformat())"/>
             <input type="submit" name="change_view" value="${_('Change')}"/>
-  
+
         <input id="orig_form_date" type="hidden" name="orig_from_date"
             py:attrs="dict(value=from_date.isoformat())"/>
         <input id="orig_to_date" type="hidden" name="orig_to_date"
             py:attrs="dict(value=to_date.isoformat())"/>
-  
+
         <table id="calendar">
           <thead>
             <tr>
@@ -52,8 +52,9 @@
           <tbody>
             <tr py:for="day in timetable"
               py:attrs="{'class': (day['date'].isoweekday() in (6,7) and 'weekend' or 'weekday')}">
-              <td py:attrs="{'class': day['date'] == today and 'date today' or 'date'}"
-                py:content="day['date'].strftime('%a %d/%m/%Y')">Date</td>
+              <td py:attrs="{'class': day['date'] == today and 'date today' or 'date'}">
+                ${day['strdate']}
+              </td>
               <td class="status" py:for="person in people">
                 <input
                    py:attrs="dict(name='%s.%s' % (day['date'].isoformat(), person),
@@ -64,7 +65,7 @@
             </tr>
           </tbody>
         </table>
-  
+
         <div class="buttons" py:if="can_update">
           <input type="submit" name="update_calendar" value="${_('Apply changes')}"/>
         </div>
